# minimal-repo

./: Dockerfile  pyproject.toml
minimal_repo/: __init__.py  cli.py
minimal_repo/flow_1/: flow.py  tasks.py
