[tool.poetry]
name = "minimal-repo"
version = "0.1.0"
description = ""
authors = ["josh-gree <joshuadouglasgreenhalgh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prefect = {extras = ["kubernetes", "postgres", "gcp"], version = "^0.14.12"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
